# OpenWMS

./: .gitattributes  README.md  pyproject.toml  requirements.txt  requirements_local.txt  setup.py
conf/: logging.default.conf  settings.default.conf
wms/: __init__.py  __main__.py  _version.py  system.py
wms/components/: __init__.py
